--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hash-space",
+  "name": "nextjs-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "googleapis": "^100.0.0",
     "next": "12.1.6",
+    "pixi-viewport": "^4.34.4",
+    "pixi.js": "^6.3.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
