--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          cd app &&
           npm run build
       - uses: amondnet/vercel-action@v20 #deploy
         with:
