--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,11 +1,18 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "compile": "BUILDING=true hardhat compile",
+    "clean": "BUILDING=true hardhat clean"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
-    "hardhat": "^2.9.3"
+    "hardhat": "^2.9.3",
+    "typechain": "^8.0.0"
   }
 }
