--- a/app/package.json
+++ b/app/package.json
@@ -6,18 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.6.6",
+    "@walletconnect/ethereum-provider": "^1.7.8",
+    "eth-hooks": "^4.2.21",
     "googleapis": "^100.0.0",
     "next": "12.1.6",
     "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.3.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^9.0.0"
   }
 }
