--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "contracts:hardhat": "yarn shx rm -rf './src/generated/contracts-types' && yarn shx cp -r '../hardhat/generated/contract-types' './src/generated'",
     "export": "next build && next export"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
+    "shx": "^0.3.4",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "eslint": "8.15.0",
