--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -2,7 +2,9 @@
   "name": "hardhat-project",
   "scripts": {
     "compile": "BUILDING=true hardhat compile",
-    "clean": "BUILDING=true hardhat clean"
+    "clean": "BUILDING=true hardhat clean",
+    "node": "BUILDING=true hardhat node --network hardhat --no-deploy",
+    "deploy": "BUILDING=true hardhat deploy --export-all ../app/src/generated/hardhat_contracts.json"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
@@ -13,6 +15,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
     "hardhat": "^2.9.3",
+    "hardhat-deploy": "^0.11.4",
     "typechain": "^8.0.0"
   }
 }
