--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,11 +1,15 @@
 {
   "name": "hardhat-project",
+  "dependencies": {
+    "typescript": ">4.0.0"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
-    "hardhat": "^2.9.3"
+    "hardhat": "^2.9.3",
+    "ts-node": "^10.7.0"
   }
 }
