Generate contract interface in JS + walletconnect (#2)
* added code generation for contracts

* added wallet connect

* allow the execution of a action on a smart contract with typed interface in JS

* updated readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 **/node_modules
 .next
+app/out
+hardhat/generated/*
+.env
+app/src/generated/*
+!app/src/generated/.gitkeep
 
 hardhat/artifacts*
 hardhat/deployments
