--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.1.0",
     "@ethersproject/providers": "^5.6.6",
     "@walletconnect/ethereum-provider": "^1.7.8",
     "eth-hooks": "^4.2.21",
@@ -23,12 +24,12 @@
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
-    "shx": "^0.3.4",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
-    "next-transpile-modules": "^9.0.0"
+    "next-transpile-modules": "^9.0.0",
+    "shx": "^0.3.4"
   }
 }
