--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,15 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.1.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@ethersproject/providers": "^5.6.6",
+    "@mui/material": "^5.7.0",
     "@walletconnect/ethereum-provider": "^1.7.8",
     "eth-hooks": "^4.2.21",
     "googleapis": "^100.0.0",
     "next": "12.1.6",
+    "notistack": "^2.0.5",
     "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.3.2",
     "react": "18.1.0",
