--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hardhat-project",
   "scripts": {
-    "compile": "BUILDING=true hardhat compile",
-    "clean": "BUILDING=true hardhat clean",
-    "node": "BUILDING=true hardhat node --network hardhat --no-deploy",
-    "deploy": "BUILDING=true hardhat deploy --export-all ../app/src/generated/hardhat_contracts.json"
+    "compile": "hardhat compile",
+    "clean": "hardhat clean && yarn shx rm -rf './generated/deployments' && yarn shx rm -rf './generated/cache'",
+    "node": "hardhat node --network hardhat --no-deploy",
+    "deploy": "hardhat --network localhost deploy --export-all ../app/src/generated/hardhat_contracts.json",
+    "deploy:testnet": "hardhat --network matic deploy --export-all ../app/src/generated/hardhat_contracts.json"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
@@ -16,6 +17,8 @@
     "ethers": "^5.6.5",
     "hardhat": "^2.9.3",
     "hardhat-deploy": "^0.11.4",
-    "typechain": "^8.0.0"
+    "shx": "^0.3.4",
+    "typechain": "^8.0.0",
+    "dotenv": "^16.0.1"
   }
 }
