--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "scripts": {
     "compile": "hardhat compile",
+    "test": "hardhat test --network hardhat",
     "clean": "hardhat clean && yarn shx rm -rf './generated/deployments' && yarn shx rm -rf './generated/cache'",
     "node": "hardhat node --network hardhat --no-deploy",
     "deploy": "hardhat --network localhost deploy --export-all ../app/src/generated/hardhat_contracts.json",
@@ -13,12 +14,15 @@
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "chai": "^4.3.6",
+    "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
     "hardhat": "^2.9.3",
     "hardhat-deploy": "^0.11.4",
     "shx": "^0.3.4",
-    "typechain": "^8.0.0",
-    "dotenv": "^16.0.1"
+    "typechain": "^8.0.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0"
   }
 }
