--- a/app/package.json
+++ b/app/package.json
@@ -16,14 +16,18 @@
     "@ethersproject/providers": "^5.6.6",
     "@mui/material": "^5.7.0",
     "@walletconnect/ethereum-provider": "^1.7.8",
+    "cookies": "^0.8.0",
     "eth-hooks": "^4.2.21",
     "googleapis": "^100.0.0",
+    "history": "^5.3.0",
     "next": "12.1.6",
     "notistack": "^2.0.5",
     "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.3.2",
+    "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "use-query-params": "^1.2.3",
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
