--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,10 @@
     "@emotion/styled": "^11.8.1",
     "@ethersproject/providers": "^5.6.6",
     "@mui/material": "^5.7.0",
+    "@uauth/js": "^1.1.0",
+    "@uauth/web3modal": "^1.1.0",
     "@walletconnect/ethereum-provider": "^1.7.8",
+    "@walletconnect/web3-provider": "^1.7.8",
     "cookies": "^0.8.0",
     "eth-hooks": "^4.2.21",
     "googleapis": "^100.0.0",
