--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,11 +5,20 @@ on:
       - main
 
 jobs:
-  test:
+  hardhat:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: |
           npm install
           npm run test
+          npm run compile
         working-directory: ./hardhat
+  app:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          npm install
+          npm run build
+        working-directory: ./app
