fixes for pr + added missing dependency

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
 
+env:
+  PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
+
 jobs:
   hardhat:
     runs-on: ubuntu-latest
