--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "shx": "^0.3.4"
+    "shx": "^0.3.4",
+    "typescript": "^4.6.4"
   }
 }
