--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -6,7 +6,8 @@
     "clean": "hardhat clean && yarn shx rm -rf './generated/deployments' && yarn shx rm -rf './generated/cache'",
     "node": "hardhat node --network hardhat --no-deploy",
     "deploy": "hardhat --network localhost deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json",
-    "deploy:testnet": "hardhat --network matic deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json"
+    "deploy:mumbai": "hardhat --network matic deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json",
+    "deploy:emerald-test": "hardhat --network emerald_testnet deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
