--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@walletconnect/ethereum-provider": "^1.7.8",
     "cookies": "^0.8.0",
     "eth-hooks": "^4.2.21",
+    "events": "^3.3.0",
     "googleapis": "^100.0.0",
     "next": "12.1.6",
     "notistack": "^2.0.5",
