--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -8,6 +8,8 @@ env:
   PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
   PRIVATE_KEY_OASIS: ${{ secrets.PRIVATE_KEY_OASIS }}
 
+concurrency: main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
