--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -10,6 +10,8 @@ env:
 
 concurrency: main
 
+permissions: write-all
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -39,6 +41,9 @@ jobs:
         continue-on-error: true
         run: npm list
 
+      - run: rm -rf ./app/src/generated
+      - run: mkdir ./app/src/generated
+
       - run: npm install
         working-directory: ./hardhat
 
@@ -50,6 +55,12 @@ jobs:
 
       - run: npm run deploy:emerald-test
         working-directory: ./hardhat
+
+      - uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          add: '**/* --force'
+          cwd: './app/src/generated'
 
       - run: |
           npm install
