--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -59,7 +59,7 @@ jobs:
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          add: '**/* --force'
+          add: '** --force'
           cwd: './app/src/generated'
 
       - run: |
