--- a/app/package.json
+++ b/app/package.json
@@ -17,10 +17,14 @@
     "@mui/material": "^5.7.0",
     "@walletconnect/ethereum-provider": "^1.7.8",
     "cookies": "^0.8.0",
+    "dotenv": "^16.0.1",
     "eth-hooks": "^4.2.21",
     "events": "^3.3.0",
+    "fs": "^0.0.1-security",
     "googleapis": "^100.0.0",
+    "mime": "^3.0.0",
     "next": "12.1.6",
+    "nft.storage": "^6.3.0",
     "notistack": "^2.0.5",
     "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.3.2",
