--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@coinbase/wallet-sdk": "^3.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@epnsproject/frontend-sdk-staging": "^1.8.0",
     "@ethersproject/providers": "^5.6.6",
     "@mui/material": "^5.7.0",
     "@walletconnect/ethereum-provider": "^1.7.8",
