--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -7,7 +7,8 @@
     "node": "hardhat node --network hardhat --no-deploy",
     "deploy": "hardhat --network localhost deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json",
     "deploy:mumbai": "hardhat --network matic deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json",
-    "deploy:emerald-test": "hardhat --network emerald_testnet deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json"
+    "deploy:emerald-test": "hardhat --network emerald_testnet deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json",
+    "start-node":"npx hardhat node"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -22,7 +23,9 @@
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "shx": "^0.3.4",
     "typechain": "^8.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.6"
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@apwine/sdk": "^0.2.2",
+    "cmd-ts": "^0.10.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0"
