--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,6 +7,7 @@ on:
 env:
   PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
   PRIVATE_KEY_OASIS: ${{ secrets.PRIVATE_KEY_OASIS }}
+  PRIVATE_KEY_ARBITRUM_NITRO: ${{ secrets.PRIVATE_KEY_ARBITRUM_NITRO }}
 
 concurrency: pr
 
@@ -49,6 +50,9 @@ jobs:
 
       - run: npm run deploy:emerald-test
         working-directory: ./hardhat
+
+      - run: npm run deploy:arbitrum-nitro
+        working-directory: ./hardhat 
 
       - run: |
           npm install
