--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -10,6 +10,7 @@
     "deploy:emerald-test": "hardhat --network emerald_testnet deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
@@ -21,10 +22,10 @@
     "hardhat-deploy": "^0.11.4",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "shx": "^0.3.4",
-    "typechain": "^8.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.6"
+    "typechain": "^8.0.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@openzeppelin/contracts": "^4.6.0",
+    "usingtellor": "^4.0.6"
   }
 }
