--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           node-version: 14
 
+      - run: npm -v
+
       - run: npm install
         working-directory: ./hardhat
 
