--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-
+          node-version: 14
+      - run: npm install -g npm@latest
       - run: npm -v
 
       # - run: npm install
