--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
-      - run: npm install -g npm@latest
+      - run: npm install -g npm@8.3.1
       - run: npm -v
 
       # - run: npm install
