--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,17 +21,17 @@ jobs:
       - run: npm install -g npm@8.3.1
       - run: npm -v
 
-      # - run: npm install
-      #   working-directory: ./hardhat
+      - run: npm install
+        working-directory: ./hardhat
 
-      # - run: npm run test
-      #   working-directory: ./hardhat
+      - run: npm run test
+        working-directory: ./hardhat
 
-      # - run: npm run deploy:mumbai
-      #   working-directory: ./hardhat
+      - run: npm run deploy:mumbai
+        working-directory: ./hardhat
 
-      # - run: npm run deploy:emerald-test
-      #   working-directory: ./hardhat
+      - run: npm run deploy:emerald-test
+        working-directory: ./hardhat
 
       - run: |
           npm install
