--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -21,25 +21,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
-
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - if: ${{ steps.cache-npm.outputs.cache-hit == false }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
+      - run: npm install -g npm@8.3.1
+      - run: npm -v
 
       - run: rm -rf ./app/src/generated
       - run: mkdir ./app/src/generated
