--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -7,6 +7,7 @@ on:
 env:
   PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
   PRIVATE_KEY_OASIS: ${{ secrets.PRIVATE_KEY_OASIS }}
+  PRIVATE_KEY_ARBITRUM_NITRO: ${{ secrets.PRIVATE_KEY_ARBITRUM_NITRO }}
 
 concurrency: main
 
