run deploy in sequence

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,6 +25,8 @@ jobs:
 
       - run: npm install
 
-      - run: npm run deploy:all
+      - run: npm run deploy:mumbai
+      - run: npm run deploy:emerald-test
+      - run: npm run deploy:arbitrum-nitro
 
       - run: npm run build
