--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -1,8 +1,8 @@
 name: backend_deploy
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - doesnotexist
 
 env:
   PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
