--- a/graph/getting-steps/subgraph.yaml
+++ b/graph/getting-steps/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     source:
       address: "0xd2116b44571CB73Aff01b122224C9D7937cD44F1" # Update to the 'live' mumbai address
       abi: Players
-      startBlock: 26655283
+      startBlock: 26655283 # Update along with the contract address
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
