--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "cookies": "^0.8.0",
     "dotenv": "^16.0.1",
     "eth-hooks": "^4.2.21",
+    "ethers": "^5.6.8",
     "events": "^3.3.0",
     "googleapis": "^100.0.0",
     "mime": "^3.0.0",
