disable deploy to nitro

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run: npm run deploy:mumbai
       # - run: npm run deploy:emerald-test
-      - run: npm run deploy:arbitrum-nitro
+      # - run: npm run deploy:arbitrum-nitro
 
       - run: npm run build
 
