--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,7 +2,7 @@ name: pr
 on:
   pull_request:
     branches:
-      - main
+      - v2
 
 env:
   PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
@@ -26,7 +26,16 @@ jobs:
       - run: npm install
 
       - run: npm run deploy:mumbai
-      - run: npm run deploy:emerald-test
-      - run: npm run deploy:arbitrum-nitro
+      # - run: npm run deploy:emerald-test
+      # - run: npm run deploy:arbitrum-nitro
 
       - run: npm run build
+
+      - uses: amondnet/vercel-action@v20 #deploy
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
+          vercel-args: '' #Optional
+          vercel-org-id: ${{ secrets.ORG_ID}} #Required
+          vercel-project-id: ${{ secrets.PROJECT_ID}} #Required
+          working-directory: ./app
+          alias-domains: steps-app-dev.vercel.app
