--- a/graph/getting-steps/subgraph.yaml
+++ b/graph/getting-steps/subgraph.yaml
@@ -6,9 +6,9 @@ dataSources:
     name: Players
     network: mumbai
     source:
-      address: "0xd2116b44571CB73Aff01b122224C9D7937cD44F1" # Update to the 'live' mumbai address
+      address: "0x4D2b0dc7B4Bf43Ef56E0Da0aD3AeA7800C65852C" # Update to the 'live' mumbai address
       abi: Players
-      startBlock: 26655283 # Update along with the contract address
+      startBlock: 26741082 # Update along with the contract address
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -19,6 +19,6 @@ dataSources:
         - name: Players
           file: ./abis/Players.json
       eventHandlers:
-        - event: StepsAdded(uint256,address)
+        - event: StepsAdded(uint256,address,uint256)
           handler: handleStepsAdded
       file: ./src/players.ts
