--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@epnsproject/frontend-sdk-staging": "^1.8.0",
     "@ethersproject/providers": "^5.6.6",
+    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.7.0",
     "@urql/exchange-auth": "^0.1.7",
     "@walletconnect/ethereum-provider": "^1.7.8",
