--- a/graph/package.json
+++ b/graph/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hash-space",
+  "name": "hash-space-graph",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
