--- a/graph/package.json
+++ b/graph/package.json
@@ -3,7 +3,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
-    "build": "graph build",
+    "build": "npm run codegen && graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ chris-lovejoy/hash-space",
     "create-local": "graph create --node http://localhost:8020/ chris-lovejoy/hash-space",
     "remove-local": "graph remove --node http://localhost:8020/ chris-lovejoy/hash-space",
