--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,7 +42,7 @@ jobs:
       - run: npm install -g npm@8.3.1
       - run: npm -v
 
-      - run: npm install
+      - run: npm ci
 
       - run: npm run deploy:mumbai
       # - run: npm run deploy:emerald-test
