--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "build": "lerna run build --parallel",
+    "build": "lerna run build --parallel --stream",
     "test": "lerna run test --stream",
     "node": "lerna run node --stream",
     "dev": "lerna run dev --stream",
-    "deploy:local": "lerna run deploy:local",
-    "deploy:mumbai": "lerna run deploy:mumbai",
-    "deploy:emerald-test": "lerna run deploy:emerald-test",
-    "deploy:arbitrum-nitro": "lerna run deploy:arbitrum-nitro",
+    "deploy:local": "lerna run deploy:local --stream",
+    "deploy:mumbai": "lerna run deploy:mumbai --stream",
+    "deploy:emerald-test": "lerna run deploy:emerald-test --stream",
+    "deploy:arbitrum-nitro": "lerna run deploy:arbitrum-nitro --stream",
     "clean": "npm exec --workspaces -- npx rimraf node_modules && npx rimraf node_modules"
   },
   "repository": {
