--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "styled-components": "^5.3.5",
     "urql": "^2.2.2",
     "uuid": "^8.3.2",
     "web3modal": "^1.9.7"
