--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -6,7 +6,7 @@
     "clean": "hardhat clean && yarn shx rm -rf './generated/deployments' && yarn shx rm -rf './generated/cache'",
     "node": "hardhat node --network hardhat --no-deploy",
     "seed:local": "hardhat seed --network localhost",
-    "deploy:local": "hardhat --network localhost deploy --write true --export-all ../app/src/generated/hardhat_contracts.json",
+    "deploy:local": "hardhat --network localhost deploy --reset --write true --export-all ../app/src/generated/hardhat_contracts.json",
     "deploy:mumbai": "hardhat --network matic deploy --write true --export-all ../app/src/generated/hardhat_contracts.json",
     "seed:mumbai": "hardhat seed --network matic",
     "deploy:emerald-test": "hardhat --network emerald_testnet deploy --write true --export-all ../app/src/generated/hardhat_contracts.json",
