--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "lerna run test --stream",
     "node": "lerna run node --stream",
     "dev": "lerna run dev --stream",
+    "compile": "lerna run compile --stream",
     "seed:local": "lerna run seed:local --stream",
     "seed:mumbai": "lerna run seed:mumbai --stream",
     "deploy:local": "lerna run deploy:local --stream",
