--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "seed:mumbai": "lerna run seed:mumbai --stream",
     "deploy:local": "lerna run deploy:local --stream",
     "deploy:mumbai": "lerna run deploy:mumbai --stream",
+    "deploy:mumbai-fresh": "lerna run deploy:mumbai-fresh --stream",
     "deploy:emerald-test": "lerna run deploy:emerald-test --stream",
     "deploy:arbitrum-nitro": "lerna run deploy:arbitrum-nitro --stream",
     "clean": "npm exec --workspaces -- npx rimraf node_modules && npx rimraf node_modules"
