--- a/graph/subgraph.yaml
+++ b/graph/subgraph.yaml
@@ -2,11 +2,11 @@ specVersion: 0.0.4
 schema:
   file: ./schema.graphql
 dataSources:
-  - kind: ethereum  
+  - kind: ethereum
     name: Players
     network: mumbai
     source:
-      address: "0x46f162eFe0364a93Cb3B644989e095f099AcBe75" # Update to the 'live' mumbai address
+      address: '0x46f162eFe0364a93Cb3B644989e095f099AcBe75' # Update to the 'live' mumbai address
       abi: Players
       startBlock: 26847586 # Update along with the contract address
     mapping:
@@ -22,6 +22,6 @@ dataSources:
       eventHandlers:
         - event: StepsAdded(uint256,address,uint256)
           handler: handleStepsAdded
-        - event: PlanetConquer(address,uint256,uint256)
-          handler: handlePlanetConquer
+        # - event: PlanetConquer(address,uint256,uint256)
+        #   handler: handlePlanetConquer
       file: ./src/players.ts
