--- a/graph/subgraph.yaml
+++ b/graph/subgraph.yaml
@@ -6,7 +6,7 @@ dataSources:
     name: Players
     network: mumbai
     source:
-      address: '0x46f162eFe0364a93Cb3B644989e095f099AcBe75' # Update to the 'live' mumbai address
+      address: '0xac63CF2fEc11208136cf1B14d09afD74dc58347e' # Update to the 'live' mumbai address
       abi: Players
       startBlock: 26847586 # Update along with the contract address
     mapping:
@@ -22,6 +22,6 @@ dataSources:
       eventHandlers:
         - event: StepsAdded(uint256,address,uint256)
           handler: handleStepsAdded
-        - event: PlanetConquer(address,uint256,uint256)
+        - event: PlanetConquer(address,uint256,uint256,uint256)
           handler: handlePlanetConquer
       file: ./src/players.ts
