--- a/graph/subgraph.yaml
+++ b/graph/subgraph.yaml
@@ -6,19 +6,22 @@ dataSources:
     name: Players
     network: mumbai
     source:
-      address: "0x4D2b0dc7B4Bf43Ef56E0Da0aD3AeA7800C65852C" # Update to the 'live' mumbai address
+      address: '0xac63CF2fEc11208136cf1B14d09afD74dc58347e' # Update to the 'live' mumbai address
       abi: Players
-      startBlock: 26741082 # Update along with the contract address
+      startBlock: 26847586 # Update along with the contract address
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - StepsAdded
+        - PlanetConquer
       abis:
         - name: Players
           file: ./abis/Players.json
       eventHandlers:
         - event: StepsAdded(uint256,address,uint256)
           handler: handleStepsAdded
+        - event: PlanetConquer(address,uint256,uint256,uint256)
+          handler: handlePlanetConquer
       file: ./src/players.ts
