--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eth-optimism/smock": "^1.1.10",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/hardhat-upgrades": "^1.19.0",
     "@typechain/ethers-v5": "^10.0.0",
