deploy fresh to mumbai for every pr

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,9 +44,7 @@ jobs:
 
       - run: npm install
 
-      - run: npm run compile
-      # - run: npm run deploy:emerald-test
-      # - run: npm run deploy:arbitrum-nitro
+      - run: npm run deploy:mumbai-fresh
 
       - run: npm run build
 
