--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -8,6 +8,7 @@ env:
   PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
   PRIVATE_KEY_OASIS: ${{ secrets.PRIVATE_KEY_OASIS }}
   PRIVATE_KEY_ARBITRUM_NITRO: ${{ secrets.PRIVATE_KEY_ARBITRUM_NITRO }}
+  POLYGONSCAN_API_KEY: ${{ secrets.POLYGONSCAN_API_KEY }}
 
 concurrency: v2
 
