implemented Unstoppable domains

--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   ],
   "devDependencies": {
     "lerna": "^5.1.4"
+  },
+  "dependencies": {
+    "@uauth/js": "^2.0.0",
+    "@uauth/web3modal": "^2.0.0"
   }
 }
