--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -55,5 +55,5 @@ jobs:
           vercel-args: '' #Optional
           vercel-org-id: ${{ secrets.ORG_ID}} #Required
           vercel-project-id: ${{ secrets.PROJECT_ID}} #Required
-          working-directory: ./app/out
+          working-directory: ./app
           alias-domains: steps-app-dev.vercel.app
