--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"next dev -p 3001\" \"npx local-ssl-proxy --source 3000 --target 3001\"",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export"
@@ -42,7 +42,9 @@
     "styled-components": "^5.3.5",
     "urql": "^2.2.2",
     "uuid": "^8.3.2",
-    "web3modal": "^1.9.7"
+    "web3modal": "^1.9.7",
+    "@uauth/js": "^2.0.0",
+    "@uauth/web3modal": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.33",
