--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,15 @@
-name: backend_deploy
+name: main
 on:
   push:
     branches:
-      - doesnotexist
+      - main
+  workflow_dispatch:
 
 env:
   PRIVATE_KEY_MUMBAI: ${{ secrets.PRIVATE_KEY_MUMBAI }}
   PRIVATE_KEY_OASIS: ${{ secrets.PRIVATE_KEY_OASIS }}
   PRIVATE_KEY_ARBITRUM_NITRO: ${{ secrets.PRIVATE_KEY_ARBITRUM_NITRO }}
+  POLYGONSCAN_API_KEY: ${{ secrets.POLYGONSCAN_API_KEY }}
 
 concurrency: main
 
@@ -18,10 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
 
       - name: Cache node modules
         id: cache-npm
@@ -45,16 +46,9 @@ jobs:
       - run: npm install -g npm@8.3.1
       - run: npm -v
 
-      - run: rm -rf ./app/src/generated
-      - run: mkdir ./app/src/generated
-
       - run: npm install
 
       - run: npm run deploy:mumbai
-
-      - run: npm run deploy:emerald-test
-
-      - run: npm run deploy:arbitrum-nitro
 
       - uses: EndBug/add-and-commit@v9
         with:
@@ -62,12 +56,19 @@ jobs:
           add: '** --force'
           cwd: './app/src/generated'
 
+      - uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          add: '** --force'
+          cwd: './hardhat/generated/deployments/matic'
+
       - run: npm run build
 
       - uses: amondnet/vercel-action@v20 #deploy
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-          vercel-args: '--prod' #Optional
+          vercel-args: '' #Optional
           vercel-org-id: ${{ secrets.ORG_ID}} #Required
           vercel-project-id: ${{ secrets.PROJECT_ID}} #Required
           working-directory: ./app
+          alias-domains: hashspace.quest
