Fitbit API Integration

--- a/app/.env.example
+++ b/app/.env.example
@@ -5,3 +5,5 @@ PRIV_KEY_BACKEND="x"
 FAUCET_SECRET=x
 NEXT_PUBLIC_UD_CLIENT_ID=x
 NEXT_PUBLIC_UD_REDIRECT_URI=x
+FITBIT_CLIENT_ID=x
+FITBIT_CLIENT_SECRET=x
